# ecommerce-watch

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_once.py
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/routes/: alerts.py  products.py
app/core/: logging.py
app/db/: session.py
app/models/: __init__.py  alert.py  competitor.py  price_snapshot.py  product.py
app/schemas/: alert.py  price_snapshot.py  product.py
app/scrapers/: base.py  castel.py  source_a.py
app/services/: detector.py  normalizer.py  notifier.py
app/static/: index.html
app/workers/: celery_app.py  tasks.py
migrations/: env.py
migrations/versions/: 386f90c30b50_add_indexes_and_unique_url.py  409eca1a7e2e_create_initial_tables.py
tests/: test_app.py  test_castel.py  test_detector.py  test_normalizer.py  test_scraper.py
