[project]
name = "ecommerce-watch"
version = "0.1.0"
description = "Veille concurrentielle e-commerce : prix, stock, alertes"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
